# ogx-showroom

./: .gitignore  .pre-commit-config.yaml  Dockerfile.dev  MIGRATION_NOTES.md  README.md  action.yml  cleanup-cluster.sh  cleanup.sh  config.sh.example  deploy-local.sh  provision.sh  push-image-to-registry.sh  pyproject.toml  setup-cluster.sh  setup.sh  test.sh  unprovision.sh  values-local.yaml.example
.github/workflows/: provision.yml  publish-charts.yml
charts/: README.md
charts/llama-stack-infra/: Chart.yaml  values.yaml
charts/llama-stack-rhoai/: Chart.yaml  values.yaml
charts/ogx-infra/: Chart.yaml  values.yaml
charts/ogx-rhoai/: Chart.yaml  values.yaml
demos/: manifest.yaml
demos/common/: utils.py
demos/conversations/: demo.py
demos/fixtures/: knowledge_base.txt
demos/hello/: demo.py
demos/multi_agent/: demo.py
demos/notebooks/: hello.ipynb  rag_demo.sh  rag_indexing.ipynb  rag_inference.ipynb  requirements.txt  start_notebook.sh
demos/rag/: demo.py  demo_file_search.py
demos/responses/: demo.py
demos/telemetry/: demo.py
kustomize/base/: etcd.yaml  keycloak.yaml  kustomization.yaml  milvus-networkpolicy.yaml  milvus.yaml  minio-networkpolicy.yaml  minio.yaml  postgres.yaml
manifests/: datasciencecluster.yaml  dscinitialization.yaml
policies/: replace-ogx-core.yaml.template  replace-ogx-operator.yaml.template
scripts/: common.sh  generate_passwords.py  knowledge_base.txt  multi-agent-demo.py  parse-manifest.py  rag-demo.py  read_k8s.py  responses-demo.py  secrets_util.py  setup-keycloak.py  sync-secrets.sh
(+111 files in other folders)
