[project]
name = "llama-stack-showroom"
version = "0.0.0"  # Not a released package, version unused
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "openai-agents>=0.11.0",
    "aiohttp>=3.9.0",
    "tabulate>=0.9.0",
    "jupyter>=1.0.0",
    "nbconvert>=7.0.0",
]
