[project]
name = "llama-stack-showroom"
version = "0.0.0"  # Not a released package, version unused
requires-python = ">=3.12,<3.14"
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "openai-agents>=0.11.0",
    "aiohttp>=3.9.0",
    "tabulate>=0.9.0",
    "jupyter>=1.0.0",
    "nbconvert>=7.0.0",
    "llama-stack-client>=0.7.1",
    "python-dotenv>=1.0.0",
]

# Note: RAG notebook dependencies (pypdf, langchain-*, ai4rag) are isolated
# in demos/notebooks/requirements.txt to avoid conflicts with openai-agents.
# The rag_demo.sh script creates a separate uv venv for those notebooks.
